# plotly-examples

./: 01_scatterplot.ipynb  README.md  bar.ipynb  box.ipynb  distribution.ipynb  heatmap.ipynb  histogram.ipynb  line.ipynb  pyproject.toml  scatter_2d.ipynb  scatter_3d.ipynb
basic_plots/: bar.ipynb  box.ipynb  heatmap.ipynb  line.ipynb  scatter_2d.ipynb  scatter_3d.ipynb
special_plots/: confusion_matrix.ipynb  correlation.ipynb  distribution.ipynb
