[tool.poetry]
name = "plotly-examples"
version = "0.1.0"
description = "Example plots with Plotly for copy-pasting"
authors = ["Peter Csizsek <peter.csizsek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
pandas = "^2.2.0"
plotly = "^5.18.0"
jupyter = "^1.0.0"
pyarrow = "^15.0.0"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
